# CodeReviewAI

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  readme.md
codereviewai/: github_api.py  main.py  prompts.py
tests/: test.py
